# minimal-workspace-root-example

./: README.md  pyproject.toml
project0/: README.md  pyproject.toml
project0/src/project0/: __init__.py
project1/: README.md  pyproject.toml
project1/src/project1/: __init__.py
project2/: README.md  pyproject.toml
project2/src/project2/: __init__.py
