[project]
name = "minimal-workspace-root-example"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Brandon Norick", email = "b.norick@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []