[project]
name = "project1"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Brandon Norick", email = "b.norick@gmail.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.workspace]
root = ".."
members = ["project0"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/project1"]